# AIEngineering

./: AgenticEngineering.md  Makefile  README.md  effective_llm_usage_guide.md  first_principles.md  pyproject.toml
effective_llm_usage_guide/: full.md
src/: __init__.py  example.py  pandas_intro.py
tests/: test_example.py  test_pandas_intro.py
