[tool.poetry]
name = "aiengineering"
version = "0.1.0"
description = "AI Engineering project"
authors = ["sanket"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.1"
numpy = "^2.3.1"
scikit-learn = "^1.7.1"
matplotlib = "^3.10.3"
yfinance = "^0.2.65"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
